# xr-exercise1and2

./: README.md
exercise1/: CMakeLists.txt  READMe.md
exercise1/src/: main.c
exercise2/: CMakeLists.txt  READMe.md
exercise2/src/: main.c
